--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.tsx",
-    "dev": "nodemon src/index.tsx"
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
@@ -13,7 +13,8 @@
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.6",
     "prisma": "^3.7.0",
-    "nodemon": "^2.0.6"
+    "ts-node": "^10.9.1"
   }
 }
